added qr code password support

--- a/www/secret.html
+++ b/www/secret.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Login</title>
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
     <style>
       body {
         background: #11644D;
@@ -46,6 +47,28 @@
         outline: 0;
         box-shadow: 0 0 2vmin #9ecaed;
       }
+
+      .imgupload {
+        position: relative;
+        color: #FF6600;
+        overflow: hidden;
+        margin: 10px;
+      }
+      .imgupload:focus {
+        color: #E64D00;
+      }
+      input#upload {
+        width: 100%;
+        height: 100%;
+        right: 0;
+        position: absolute;
+        padding: 0;
+        font-size: 0px;
+        cursor: pointer;
+        opacity: 0;
+        filter: alpha(opacity=0);
+      }
+
       span.incorrect {
         opacity: 0;
         width: 23vw;
@@ -66,11 +89,16 @@
         animation-duration: 1.5s;
       }
     </style>
+    <script src="/qrcode/index.min.js" charset="utf-8"></script>
   </head>
   <body>
     <form action="/secret" method="post">
       <label for="hash">Password:</label>
       <input id="hash" name="hash" type="password" autofocus>
+      <span class="imgupload">
+        <i class="fa fa-camera"></i>
+        <input type="file" capture="camera" accept="image/*" id="upload">
+      </span>
       <br>
       <span class="incorrect">
         Incorrect Password
@@ -81,6 +109,20 @@
         setTimeout(() => {
           document.querySelector('span.incorrect').className += ' show';
         }, 500)
+      }
+
+      document.querySelector('#upload').onchange = (e) => {
+        let file = e.target.files[0]
+        let url = URL.createObjectURL(file)
+        let qr = new QrCode()
+        qr.callback = (res, err) => {
+          if (err) alert('Please try again')
+          if (typeof res === 'string') {
+            document.querySelector('#hash').value = res
+            document.querySelector('form').submit()
+          }
+        }
+        qr.decode(url)
       }
     </script>
   </body>
