Switched to jsmpeg

--- a/www/secret.html
+++ b/www/secret.html
@@ -94,7 +94,7 @@
   <body>
     <form action="/secret" method="post">
       <label for="hash">Password:</label>
-      <input id="hash" name="hash" type="password" autofocus>
+      <input id="hash" name="hash" type="password" autocomplete="current-password" autofocus>
       <span class="imgupload">
         <i class="fa fa-camera"></i>
         <input type="file" capture="camera" accept="image/*" id="upload">
