--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <script src="/bower_components/platform.js/platform.js" charset="utf-8"></script>
     <script src="/bower_components/es6-promise/es6-promise.min.js" charset="utf-8"></script>
     <script src="/bower_components/fulltilt/dist/fulltilt.min.js" charset="utf-8"></script>
+    <script src="/jsmpeg.min.js" charset="utf-8"></script>
   </head>
   <body>
 
